--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,8 @@ p {
   margin-bottom: 30px;
 }
 body, html {
-  background-color: black;
-  color: white; /* Set text color for the whole page */
+  background-color: white;
+  color: black;
 }
 .about p:nth-child(3){
   margin-bottom: 20px; 
