--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,13 @@ p {
   word-spacing: 5px; /* Adjust the value as needed */
 }
 .about{
-  background-color: white;
-  color: black;
+   background-color: black;
+  color: white;
   margin-bottom: 30px;
 }
 body, html {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
 }
 .about p:nth-child(3){
   margin-bottom: 20px; 
